# SwiftLaTeX

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  bibtex.c  deno.jsonc  kpseemu.c  library.js  main.ts  pre.asyncify.js  pre.d.ts  pre.js  pre.promise.js  texfile.c  xetex.d.ts
.devcontainer/: devcontainer.json
examples/: index.html  index.js  main.ts  worker.js
tex/: xetexd.h
xetex.wasm/: Makefile  XeTeXEngine.js  XeTeXEngine.tsx  deno.jsonc  library.js  pre.d.ts  pre.js
